@@ -117,11 +117,6 @@ public class ColumnSerializer implements IColumnSerializer
         else
         {
             long ts = dis.readLong();
-            long now = FBUtilities.timestampMicros();
-
-            if (ts > now) // fixing the timestamp from the future to be 'now' in micros
-                ts = now; // helps with CASSANDRA-4561 as remote nodes can send schema with wrong nanoTime() timestamps
-
             ByteBuffer value = ByteBufferUtil.readWithLength(dis);
             return (b & COUNTER_UPDATE_MASK) != 0
                    ? new CounterUpdateColumn(name, value, ts)
